tests/compiler/function_arguments_mismatch.kk.out
1
========

========
error:
  ┌─ tests/compiler/function_arguments_mismatch.kk:3:5
  │
3 │     \(x, y) => 1
  │     ^^^^^^^^^^^^ Function arguments length mismatch
  │
  = Expected 1 argument, but this function has 2 arguments
