tests/compiler/function_arguments_mismatch.kk
let f = 
    \(x: number) => 1
    \(x, y) => 1
